<resources>
    <string name="app_name">BrainTrainer</string>
    <string name="go">GO</string>
    <string name="_0">0</string>
    <string name="_00_30">00:30</string>
    <string name="_31_20">31+20</string>
    <string name="_10">10</string>
    <string name="_52">52</string>
    <string name="_55">55</string>
    <string name="_65">65</string>
    <string name="correct">Correct!</string>
    <string name="_0_0">0/0</string>
    <string name="play_again">Play Again</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="select_level">Select Level</string>
    <string name="_999_999">999+999</string>
</resources>
